--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@
 
 
 
-    <!--Swita end-->
 
 
 
@@ -108,7 +107,7 @@
             <span id="post">
                 <b>Posts(368)</b>
             </span>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <!-- <span class="navbar-toggler-icon"></span> -->
             <p>
 
@@ -171,7 +170,7 @@
                 <div class="card" style="width: 360; height:328;">
                     <img src="img1.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <img src="Article.png" alt="" class="img-fluid">
+                        <p class="" style="font-weight: bolder;">✍️ Article</p>
 
                         <div class="d-flex">
 
@@ -264,7 +263,8 @@
 
         <div class="container">
             <div class="pen sticky-nav">
-                <img src="pen.png" alt="" class="">
+                <i class="fas fa-pen my-3 mx-3" style="font-size: 20px; color : white;"></i>
+
             </div>
         </div>
         <!--sticker-->
@@ -277,7 +277,7 @@
                 <div class="card" style="width: 360; height:328;">
                     <img src="img2.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <img src="Education.png" alt="" class="img-fluid">
+                        <p class="" style="font-weight: bolder;">🔬️ Education</p>
 
                         <div class="d-flex">
 
@@ -345,7 +345,7 @@
                 <div class="card" style="width: 360; height:328;">
                     <img src="img3.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <img src="Meetup.png" alt="" class="img-fluid">
+                        <p class="" style="font-weight: bolder;">🗓️ Meetup</p>
 
                         <div class="d-flex">
 
@@ -440,8 +440,7 @@
                 <div class="card" style="width: 360; height:328;">
                     <!-- <img src="img2.png" class="card-img-top" alt="..."> -->
                     <div class="card-body">
-                        <img src="Job.png" alt="" class="img-fluid">
-
+                        <p class="" style="font-weight: bolder;">💼️ Job</p>
                         <div class="d-flex">
 
                             <h5 class="card-title">
