--- a/logged-in.html
+++ b/logged-in.html
@@ -171,8 +171,8 @@
                 <div class="card" style="width: 360; height:328;">
                     <img src="img1.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <img src="Article.png" alt="" class="img-fluid">
-
+                        <!-- <img src="Article.png" alt="" class="img-fluid"> -->
+                        <p class="" style="font-weight: bolder;">✍️ Article</p>
                         <div class="d-flex">
 
                             <h5 class="card-title">
@@ -313,7 +313,8 @@
 
         <div class="container">
             <div class="pen sticky-nav">
-                <img src="pen.png" alt="" class="">
+                <i class="fas fa-pen my-3 mx-3" style="font-size: 20px; color : white;"></i>
+
             </div>
         </div>
         <!--sticker-->
@@ -324,7 +325,8 @@
 
             <div class="col-lg-8 col-md-6 col-sm-12">
                 <div class="card" style="width: 360; height:328;">
-                    <img src="img2.png" class="card-img-top" alt="...">
+                    <!-- <img src="img2.png" class="card-img-top" alt="..."> -->
+                    <p class="" style="font-weight: bolder;">🔬️ Education</p>
                     <div class="card-body">
                         <img src="Education.png" alt="" class="img-fluid">
 
@@ -394,7 +396,7 @@
                 <div class="card" style="width: 360; height:328;">
                     <img src="img3.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <img src="Meetup.png" alt="" class="img-fluid">
+                        <p class="" style="font-weight: bolder;">🗓️ Meetup</p>
 
                         <div class="d-flex">
 
@@ -495,8 +497,7 @@
                 <div class="card" style="width: 360; height:328;">
                     <!-- <img src="img2.png" class="card-img-top" alt="..."> -->
                     <div class="card-body">
-                        <img src="Job.png" alt="" class="img-fluid">
-
+                        <p class="" style="font-weight: bolder;">💼️ Job</p>
                         <div class="d-flex">
 
                             <h5 class="card-title">
